<resources>
    <string name="app_name">StoryTeller</string>

    <!-- Loading Layout -->
    <string name="loading_loading">Loading</string>

    <!--    Authentication    -->
    <string name="authentification_need_internet">This Application needs an Internet Connection, please connect to the internet to continue</string>
    <string name="authentification_connection_error">Sorry there was an error with your connection</string>
    <string name="authentication_connecting">Connecting</string>

    <!--  SignIn  Layout-->
    <string name="signIn_create_profile">Create Profile</string>
    <string name="signIn_no_account">Exit <b>StoryTeller</b> </string>
    <string name="signIn_google_account">Continue with my <b>Google Account</b> </string>
    <string name="signIn_storyteller_logo">Application Logo</string>
    <string name="signIn_storyteller_checkbox">
        I accept to have <b>fun</b> while using this app.
    </string>

    <!-- Loading Profile Layout-->
    <string name="launching_app">Welcome</string>

    <!-- Home -->
    <string name="home_available_story">Create your own story!</string>
    <string name="home_setting_desc">Settings</string>
    <string name="home_unsufficient_tokens">You have unsufficient tokens, come back in a few minutes</string>
    <string name="home_crap">crap</string>
    <string name="home_profile_image">Image account</string>
    <string name="home_play_button">Play Button</string>

    <!-- StoryChooser -->
    <string name="story_chooser_header_title">Available Stories</string>
    <string-array name="themes_array">
        <item>Funny</item>
        <item>Adventure</item>
        <item>Horror</item>
        <item>Build Up</item>
    </string-array>
    <string-array name="themes_array_spinner">
        <item>All</item>
        <item>Funny</item>
        <item>Adventure</item>
        <item>Horror</item>
        <item>Build Up</item>
    </string-array>
    <string name="story_chooser_add_story_description">Button to create a new Story</string>
    <string name="story_chooser_all">All</string>
    <string name="main_press_back_again_exit">Press back button again to exit the App.</string>

    <!--    StoryCreator Layout    -->
    <string name="story_creator_header_title">Create your own Story!</string>
    <string name="story_creator_title_hint">Title</string>
    <string name="story_creator_character_hint">Main character\'s name</string>
    <string name="story_creator_theme_btn">Pick a THEME</string>
    <string name="story_creator_next_btn">Next</string>
    <string name="story_creator_invalid_char">is an invalid character.</string>

    <!--    StoryEditor Layout -->
    <string name="story_editor_new_story_sentence_hint">And so it begins&#8230;</string>
    <string name="story_editor_continue_sentence_hint">Wr</string>
    <string name="story_editor_submit_btn">Submit</string>
    <string name="story_editor_previous_sentence">Previous Sentence</string>

    <!--    Header Layout   -->
    <string name="story_list_header_title">Completed Stories</string>
    <string name="header_back_button">Back Button</string>

    <!--    Item StoryList  -->
    <string name="completed_stories_list_item_author_label">Author: </string>

    <!--    BottomNavigator -->
    <string name="navigator_all">All</string>
    <string name="navigator_only_me">Only Me</string>
    <string name="navigator_favs">My Favs</string>

    <!-- Empty ListView-->
    <string name="empty_all_story">Sorry there\'s no stories</string>
    <string name="empty_my_story">Sorry none of your stories are completed</string>
    <string name="empty_fav_story">Sorry you don\'t have any favorites stories</string>
    <string name="empty_chooser_story">Sorry there\'s no story to edit.\n Maybe you could Create a new one</string>

    <!--  SettingsDialog Layout   -->
    <string name="settings_title">Settings</string>
    <string name="settings_clearDB">Clear Database</string>
    <string name="settings_grant_tokens">Add Tokens</string>
    <string name="settings_consume_tokens">Remove Tokens</string>
    <string name="settings_exit">Close settings</string>
    <string name="settings_log_out">Log out</string>
    <string name="settings_debug_version">-- DEBUG VERSION --</string>
    <string name="settings_unlock_all_stories_tokens">Unlock Stories</string>

    <!-- SettingsDialog Class -->
    <string name="setting_log_out">Logout</string>
    <string name="setting_added_token">Token added!</string>
    <string name="setting_are_you_sure">Are you sure?</string>
    <string name="setting_dbh_cleared">DBHandler cleared</string>
    <string name="setting_dbh_already_cleared">DBHandler already cleared</string>
    <string name="setting_all_stories_unlocked_msg">All Stories are now unlocked</string>

    <!-- StoryInfoDialog -->
    <string name="dialog_story_info_dialog_title">Story Info</string>
    <string name="dialog_story_info_title">Title</string>
    <string name="dialog_story_info_label_title">Title : </string>
    <string name="dialog_story_info_label_character">Main Character : </string>
    <string name="dialog_story_info_label_theme">Theme : </string>
</resources>