<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.Dialog.Box">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            style="@style/AppTheme.Dialog.Title" />

        <View
            android:layout_width="match_parent"
            style="@style/AppTheme.Dialog.Content.Separator"
            android:id="@+id/view" />

        <!--<Button
            style="@style/AppTheme.Button"
            android:text="@string/settings_clearDB"
            android:id="@+id/settings_clearDB_btn"
            android:layout_width="match_parent" />-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button"
            android:text="@string/settings_grant_tokens"
            android:id="@+id/settings_grant_token_btn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button"
            android:text="@string/settings_consume_tokens"
            android:id="@+id/settings_consume_token_btn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button"
            android:text="@string/settings_unlock_all_stories_tokens"
            android:id="@+id/settings_unlock_all_stories_btn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button"
            android:id="@+id/setting_log_out_button"
            android:text="@string/setting_log_out" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button"
            android:id="@+id/settings_close_btn"
            android:layout_marginTop="25dp"
            android:text="@string/settings_exit" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/settings_debug_version"
        android:id="@+id/textView"
        android:paddingTop="15dp"
        android:textSize="12sp"
        android:textColor="#bfbfbf"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />


</RelativeLayout >