<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.Dialog.Box">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:id="@+id/dialog_story_info">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Dialog.Title"
            android:text="@string/dialog_story_info_dialog_title"/>

        <View
            android:layout_width="match_parent"
            style="@style/AppTheme.Dialog.Content.Separator" />

        <!-- Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            style="@style/AppTheme.Dialog.StoryInfoContainer">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Dialog.StoryInfoLabel"
                android:text="@string/dialog_story_info_label_title" />

            <TextView
                android:id="@+id/dialog_story_info_title"
                style="@style/AppTheme.Dialog.StoryInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- Character Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Dialog.StoryInfoContainer">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_story_info_label_character"
                style="@style/AppTheme.Dialog.StoryInfoLabel"
                />

            <TextView
                android:id="@+id/dialog_story_info_character_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Dialog.StoryInfoText"/>
        </LinearLayout>

        <!-- Theme -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Dialog.StoryInfoContainer">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Dialog.StoryInfoLabel"
                android:text="@string/dialog_story_info_label_theme"/>

            <TextView
                android:id="@+id/dialog_story_info_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Dialog.StoryInfoText"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout >