<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/AppTheme.Activity">



        <!-- Header -->
       <include layout="@layout/green_header_frame_layout"/>


        <ListView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/listview"
            android:divider="@color/softGrey"
            android:dividerHeight="1dp"/>


        <!-- Navigation Bar Maison -->
        <LinearLayout
            android:background="@color/softGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:baselineAligned="false">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:id="@+id/all_story_page">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/navigator_all"
                    android:textColor="@color/primary"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:id="@+id/my_story_page">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/navigator_only_me"
                    android:textColor="@color/primary"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:id="@+id/favs_story_page">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/navigator_favs"
                    android:textColor="@color/primary"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>