<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait">

    <!-- Header Section -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/profile_section"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_header_section_height"
        android:background="@color/primary"
        android:baselineAligned="false">

        <!-- Settings -->
        <LinearLayout
            android:layout_width="@dimen/home_header_aside_layout_width"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/home_header_aside_layout_vertical_padding"
            android:paddingBottom="@dimen/home_header_aside_layout_vertical_padding">
            <ImageButton
                android:id="@+id/settings_btn"
                android:layout_width="@dimen/settings_btn_dimensions"
                android:layout_height="@dimen/settings_btn_dimensions"
                android:background="@drawable/settings_icon"
                android:contentDescription="@string/home_setting_desc"/>
        </LinearLayout>

        <!-- Profile -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <android.support.v7.widget.CardView
                android:layout_width="@dimen/home_header_profile_image_size"
                android:layout_height="@dimen/home_header_profile_image_size"
                app:cardCornerRadius="@dimen/home_header_profile_image_radius"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1">
                <ImageView
                    android:id="@+id/profile_image_view"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:src="@drawable/token"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/home_profil_image">
                </ImageView>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/profile_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:text="@string/home_crap"/>
        </LinearLayout>

        <!-- Tokens -->
        <LinearLayout
            android:layout_width="@dimen/home_header_aside_layout_width"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/home_header_aside_layout_vertical_padding"
            android:paddingBottom="@dimen/home_header_aside_layout_vertical_padding">

            <ToggleButton
                android:id="@+id/token1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/toggle_tokens"
                android:textOn=""
                android:textOff=""
                android:clickable="false"/>

            <ToggleButton
                android:id="@+id/token2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textOn=""
                android:textOff=""
                android:background="@drawable/toggle_tokens"
                android:clickable="false"/>

            <ToggleButton
                android:id="@+id/token3"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:textOn=""
                android:textOff=""
                android:background="@drawable/toggle_tokens"
                android:clickable="false"/>

        </LinearLayout>
    </LinearLayout>


    <!-- Content -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- Action Zone -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:textSize="24sp"
                android:textStyle="italic"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:text="@string/home_available_story"/>
            <ImageButton
                android:id="@+id/home_play_btn"
                android:layout_width="@dimen/play_btn_size"
                android:layout_height="@dimen/play_btn_size"
                android:contentDescription="@string/home_play_button" />
        </LinearLayout>


        <!-- Slides Indicator Section -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/slides_indicator_section"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_height"
            android:background="@color/softGrey">

        </LinearLayout>
    </LinearLayout>
</LinearLayout>